# Equirect2Fisheye

./: .gitignore  CMakeLists-metal-only.txt  CMakeLists-minimal.txt  CMakeLists-test.txt  CMakeLists.txt  Info.plist.in  LICENSE  README.md  TROUBLESHOOTING.md  build-plugin.sh  create-clean-metal-plugin.sh  create-proper-metal-plugin.sh  create-simple-plugin.sh  create-working-plugin.sh  equirectangular_to_fisheye.metal  fisheye.effect  fix-fisheye-effect.sh  fix-metal-plugin.sh  fix-plugin-binary.sh  fix-plugin.sh  integrate-metal-shader.sh  obs-metal-fisheye-filter-simple.cpp  obs-metal-fisheye-filter.cpp  test-plugin-approach.sh  test-plugin.sh  use-existing-plugin.sh  use-shader-directly.sh
.github/workflows/: build.yml
scripts/: github-secrets-setup.md  setup-code-signing.md  setup-code-signing.sh  verify-github-secrets.sh
